Fix sidebar icon and text alignment

--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ header {
 }
 
 nav {
+    --icon-space: 2rem;
+    --icon-text-gap: .5rem;
     grid-area: sidebar;
     background-color: lightcoral;
     z-index: 2;
@@ -132,7 +134,6 @@ nav {
     grid-template-rows: max-content 2fr 3fr;
     gap: 3rem;
     align-items: start;
-    justify-items: start;
 }
 
 nav > ul {
@@ -140,23 +141,28 @@ nav > ul {
     gap: 1rem;
     --icon-w-h: 1em;
     list-style: none;
-    padding: 0.7rem;
+    padding: 0;
 }
 
 nav li {
     display: grid;
     grid-auto-flow: column;
+    grid-template-columns: var(--icon-space) 1fr;
     justify-content: start;
     align-items: center;
-    column-gap: 1rem;
+    column-gap: var(--icon-text-gap);
+}
+
+nav li > .ph-icon {
+    justify-self: center;
 }
 
 nav > .sidebar-heading {
-    --icon-w-h: 2em;
+    --icon-w-h: var(--icon-space);
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: max-content 1fr;
-    gap: .5rem;
+    column-gap: var(--icon-text-gap);
     align-items: center;
 }
 
